@@ -1,6 +1,7 @@
 package mil.army.usace.hec.vortex.io;
 
 import mil.army.usace.hec.vortex.VortexGrid;
+import mil.army.usace.hec.vortex.VortexProperty;
 import ucar.nc2.Attribute;
 import ucar.nc2.write.Nc4Chunking;
 import ucar.nc2.write.Nc4ChunkingStrategy;
@@ -8,12 +9,17 @@ import ucar.nc2.write.NetcdfFileFormat;
 import ucar.nc2.write.NetcdfFormatWriter;
 
 import java.beans.PropertyChangeListener;
+import java.nio.file.Files;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 public class NetcdfDataWriter extends DataWriter {
     private final List<VortexGrid> vortexGridList;
-    private final boolean isOverwrite;
+
+    private static final Map<String, Boolean> fileFirstWriteCompleted = Collections.synchronizedMap(new HashMap<>());
+    private final boolean overwriteExistingFile;
 
     // NetCDF4 Settings
     public static final Nc4Chunking.Strategy CHUNKING_STRATEGY = Nc4Chunking.Strategy.standard;
@@ -24,23 +30,45 @@ public class NetcdfDataWriter extends DataWriter {
     /* Constructor */
     NetcdfDataWriter(Builder builder) {
         super(builder);
-        String overwriteOption = options.get("isOverwrite");
-        isOverwrite = overwriteOption == null || Boolean.parseBoolean(overwriteOption);
+        // This synchronized lock makes sure that each NetcdfDataWriter instance gets initialized one at a time
+        // Avoid race conditions of multiple instances trying to be the first one to overwrite the destination file.
+        synchronized (NetcdfDataWriter.class) {
+            // Check if file exists and get user preference for overwriting
+            boolean fileExists = Files.exists(destination);
+            boolean userPrefersOverwrite = getOverwritePreference();
+
+            String pathToFile = destination.toString();
+            boolean firstWriteCompleted = fileFirstWriteCompleted.getOrDefault(pathToFile, false);
+
+            if (!fileExists || userPrefersOverwrite && !firstWriteCompleted) {
+                overwriteExistingFile = true;
+                fileFirstWriteCompleted.put(pathToFile, true);
+            } else {
+                overwriteExistingFile = false;
+            }
+        }
+
+
         vortexGridList = data.stream()
                 .filter(VortexGrid.class::isInstance)
                 .map(VortexGrid.class::cast)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private boolean getOverwritePreference() {
+        String overwriteOption = options.get("isOverwrite");
+        return overwriteOption == null || Boolean.parseBoolean(overwriteOption);
     }
 
     /* Write */
     @Override
     public void write() {
-        if (isOverwrite) overwriteData();
+        if (overwriteExistingFile) overwriteData();
         else appendData();
     }
 
     private void overwriteData() {
-        NetcdfFormatWriter.Builder writerBuilder = initWriterBuilder(isOverwrite);
+        NetcdfFormatWriter.Builder writerBuilder = initWriterBuilder();
         addGlobalAttributes(writerBuilder);
 
         NetcdfGridWriter gridWriter = new NetcdfGridWriter(vortexGridList);
@@ -49,16 +77,17 @@ public class NetcdfDataWriter extends DataWriter {
     }
 
     public void appendData() {
-        NetcdfFormatWriter.Builder writerBuilder = initWriterBuilder(isOverwrite);
+        NetcdfFormatWriter.Builder writerBuilder = initWriterBuilder();
+
         NetcdfGridWriter gridWriter = new NetcdfGridWriter(vortexGridList);
         gridWriter.addListener(writerPropertyListener());
         gridWriter.appendData(writerBuilder);
     }
 
-    private NetcdfFormatWriter.Builder initWriterBuilder(boolean isOverwrite) {
+    private NetcdfFormatWriter.Builder initWriterBuilder() {
         Nc4Chunking chunker = Nc4ChunkingStrategy.factory(CHUNKING_STRATEGY, DEFLATE_LEVEL, SHUFFLE);
         return NetcdfFormatWriter.builder()
-                .setNewFile(isOverwrite)
+                .setNewFile(overwriteExistingFile)
                 .setFormat(NETCDF_FORMAT)
                 .setLocation(destination.toString())
                 .setChunker(chunker);
@@ -67,11 +96,8 @@ public class NetcdfDataWriter extends DataWriter {
     private PropertyChangeListener writerPropertyListener() {
         return e -> {
             String propertyName = e.getPropertyName();
-            if (propertyName.equals(DataWriter.WRITE_COMPLETED)) {
-                fireWriteCompleted();
-            }
 
-            if (propertyName.equals(DataWriter.WRITE_ERROR)) {
+            if (VortexProperty.ERROR.equals(propertyName)) {
                 String errorMessage = String.valueOf(e.getNewValue());
                 fireWriteError(errorMessage);
             }
